--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -111,7 +111,16 @@ Metrics/MethodLength:
   Max: 100
 
 Metrics/AbcSize:
-  Max: 26
+  Max: 50
 
 Metrics/BlockLength:
   Max: 100
+
+Metrics/CyclomaticComplexity:
+  Max: 10
+
+Metrics/PerceivedComplexity:
+  Max: 10
+
+Metrics/ClassLength:
+  Max: 160
